k8s/init/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: miniblog
spec:
  containers:
    - name: debug-container
      image: nicolaka/netshoot
      command: ["sleep", "infinity"]
